--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. &nbsp; 
-    | &nbsp; Coded by <a href="https://zeinaradwan.github.io/Mobile-Desktop-QR/">Zeina Radwan</a>.
+    | &nbsp; Coded by <a href="#">Zeina Radwan</a>.
   </div>
 </body>
 </html>
