--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
       Improve your front-end skills by building projects.
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     <div class="box">
-      
-      <ul>To see the solution visit the link
+      <h4>To see the solution visit the link
+      <ul>
         <li>
           <a href="./QR.html" target="_blank"> QR link </a>
         </li>
       </ul>
+
+    </h4>
       </div>
   </div> 
   <div class="attribution">
