Created html file

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
-  <link rel="stylesheet" href="Css/indexcss.css"/>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Qr Project</title>
+    <!--Css file-->
+    <link rel="stylesheet" href="Css/main.css"/>
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Neonderthaw&family=Outfit:wght@400;700&family=Work+Sans:wght@200;300;400;500;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="header">
-    <p>
-      Improve your front-end skills by building projects.
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    <div class="box">
-      <h4>To see the solution visit the link
-      <ul>
-        <li>
-          <a href="./QR.html" target="_blank"> QR link </a>
-        </li>
-      </ul>
 
-      </h4>
-      </div>
-  </div> 
+    <div class="parent">
+      
+         <img src="Images/image-qr-code.png"/>
+         
+          <h3>Improve your front-end skills by building projects</h3>
+          <p>Scan the QR code to visit Frontend Mentor
+            and take your coding skills to the next level
+          </p>
+    </div>  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. &nbsp; 
     | &nbsp; Coded by <a href="https://zeinaradwan.github.io/Mobile-Desktop-QR/">Zeina Radwan</a>.
