--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qr Project</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon-32x32.png">
+  
+    <title>Frontend Mentor | QR code component</title>
     <!--Css file-->
     <link rel="stylesheet" href="Css/main.css"/>
     <!--Fonts-->
