--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 <body>
 
     <div class="parent">
-      
-         <img src="Images/image-qr-code.png"/>
-         
+         <img src="Images/image-qr-code.png" alt="QR"/>
           <h3>Improve your front-end skills by building projects</h3>
           <p>Scan the QR code to visit Frontend Mentor
             and take your coding skills to the next level
