Modified css file

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Neonderthaw&family=Outfit:wght@400;700&family=Work+Sans:wght@200;300;400;500;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="parent">
+    <main class="parent">
          <img src="Images/image-qr-code.png" alt="QR"/>
-          <h3>Improve your front-end skills by building projects</h3>
+          <h1>Improve your front-end skills by building projects</h1>
           <p>Scan the QR code to visit Frontend Mentor
             and take your coding skills to the next level
           </p>
-    </div>  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. &nbsp; 
-    | &nbsp; Coded by <a href="https://zeinaradwan.github.io/Mobile-Desktop-QR/">Zeina Radwan</a>.
-  </div>
+    </main> 
+  <div class="footer">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. &nbsp; 
+      | &nbsp; Coded by <a href="https://zeinaradwan.github.io/Mobile-Desktop-QR/">Zeina Radwan</a>.
+</div> 
 </body>
 </html>
